--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Document</title>
 </head>
 <body>
-  <img src="images/avatar.jpeg" alt="Avatar" class="avatar">
+  <img src="avatar.jpeg" alt="Avatar" class="avatar">
   <table class="table">
     <thead>
       <tr>
